<resources>
    <string name="app_name">Contact List</string>
    <string name="btn_home">Home</string>
    <string name="btn_fav">Favorites</string>
    <string name="text_view_nombre">Name</string>
    <string name="text_view_number">Number</string>
    <string name="txt_name">Name</string>
    <string name="txt_number">Number</string>
    <string name="btn_empty_star">☆</string>
    <string name="btn_full_star">★</string>
    <string name="share">Share</string>
    <string name="permiso_necesario">Permission needed</string>
    <string name="permiso_mensaje">This permission is needed to read your contacts</string>
    <string name="cancel">Cancel</string>
    <string name="edit_text_search">Search</string>
    <string name="txt_add_nombre">Name:</string>
    <string name="txt_add_number">Number:</string>
    <string name="edit_text_add_name">Enter contact name</string>
    <string name="edit_text_add_number">Enter contact number</string>
    <string name="btn_add">Add</string>
</resources>
