<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:text="@string/txt_add_nombre"
        android:textColor="@color/BlackText"
        />

    <TextView
        android:layout_below="@id/txt_name"
        android:id="@+id/txt_number"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/txt_add_number"
        android:textColor="@color/BlackText"
        />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_toRightOf="@id/txt_name"
        android:layout_toEndOf="@id/txt_name"
        android:layout_alignBaseline="@id/txt_name"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_add_name"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_text_number"
        android:layout_toRightOf="@id/txt_number"
        android:layout_toEndOf="@id/txt_number"
        android:layout_alignBaseline="@id/txt_number"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_add_number"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btn_add"
        android:onClick="boton_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_below="@id/txt_number"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
