<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_contact_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:gravity="center"
    app:cardCornerRadius="2dp"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/contact"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/BlackText"
                android:textStyle="bold"
                android:text="@string/txt_name"
                />

            <TextView
                android:id="@+id/text_view_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/BlackText"
                android:text="@string/txt_number"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_empty_star"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>
